Remove dcc.Loading; prevent tree overlapping grid; refactoring layout files

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,7 @@
     width: 100%;
     white-space: normal; /* Allow text to wrap */
     display: block; /* Needs to be block display for overflow */
-    overflow-x: hidden;
+    overflow-x: auto;
     overflow-y: auto;
 }
 
